# aa-sigcheck-cog

./: .gitignore  README.md  pyproject.toml
aa_sigcheck/: sigcheck.py
